--- a/static/style.css
+++ b/static/style.css
@@ -139,3 +139,15 @@ textarea[name="content"] {
     height: 600px;
     width: 1100px;
 }
+
+.container-login {
+    background-color: #f8f8f8;
+    padding: 20px;
+    margin: 50px auto;
+    width: 400px;
+    border-radius: 5px;
+    text-align: center;
+    font-family: Arial, sans-serif;
+}
+
+
