--- a/templates/base.html
+++ b/templates/base.html
@@ -30,7 +30,6 @@
                         Cálculo e Análise
                     </a>
                     <div class="dropdown-menu active" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Outra função</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown active">
@@ -39,8 +38,6 @@
                         Álgebra
                     </a>
                     <div class=" dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Outra função</a>
-                        <a class="dropdown-item" href="#">Outra função</a>
                     </div>
                 </li>
                 <li class="nav-item dropdown active">
@@ -49,12 +46,17 @@
                         Estatística
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Outra função</a>
-                        <a class="dropdown-item" href="#">Outra função</a>
+                        
                     </div>
                 </li>
-                <li class="nav-item active">
-                    <a class="nav-link nav-link-main" href="#">Análise Numérica</a>
+                <li class="nav-item dropdown active">
+                    <a class="nav-link dropdown-toggle nav-link-main" href="#" id="navbarDropdownMenuLink" role="button"
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Análise Numérica
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                        
+                    </div>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link nav-link-main" href="/sabermais/">Sobre nós</a>
@@ -107,8 +109,8 @@
 <body>
     {% if 'tipo' in session and session['tipo'] == 'admin' %}
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">Admin</a>
+        <div class="container-fluid">            
+            <a class="navbar-brand" href="/admin_page/{{ session['id_user'] }}">Admin</a>                    
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                 aria-label="Toggle navigation">
