--- a/static/style.css
+++ b/static/style.css
@@ -133,7 +133,7 @@
 
 label {
     display: block;
-  }
+}
 
 textarea[name="content"] {
     height: 600px;
@@ -150,4 +150,26 @@ textarea[name="content"] {
     font-family: Arial, sans-serif;
 }
 
+footer {
+    text-align: center;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.foot-con {
+    position: relative;
+    min-height: 100%;
+    margin-top: 120px;
+}
+
+.footc {
+    position: relative;
+    min-height: 100%;
+    margin-top: 300px;
+}
 
