--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -12,12 +12,12 @@
     
     <div class="form-group">
       <label for="thumbnail">Thumbnail:</label>
-      <input type="file" id="thumbnail" name="thumbnail" required>
+      <input type="file" id="thumbnail" name="thumbnail">
     </div>
 
     <div class="form-group">
       <label for="file">File:</label>
-      <input type="file" id="file" name="file" required>
+      <input type="file" id="file" name="file">
     </div>
 
     <div class="form-group">
